florence-infra/modules/networking/nat.tf
resource "aws_nat_gateway" "this" {

  allocation_id = aws_eip.nat.id

  subnet_id = aws_subnet.this[local.nat_public_subnet].id

  depends_on = [aws_internet_gateway.this]

  tags = merge(
    local.common_tags,
    {
      Name = local.names.nat
    }
  )
}
